# KNN-Classifier

./: CMakeLists.txt  README.md  main.cpp
classifier/: Algorithms.cpp  Algorithms.h  Classified.cpp  Classified.h  Classifier.cpp  Classifier.h
classifier/distance/: ChebyshevDistance.cpp  ChebyshevDistance.h  Distance.h  EuclideanDistance.cpp  EuclideanDistance.h  ManhattanDistance.cpp  ManhattanDistance.h
